Design 4.0: Restored Gallery Layout (Premium)

--- a/index.html
+++ b/index.html
@@ -28,87 +28,62 @@
 
     <main class="main-container">
 
-        <!-- 2. The Journey (Magazine Layout) -->
-        <section id="journey" class="journey-section">
-
-            <!-- Moment 1 -->
-            <div class="moment-card fade-in-up">
-                <div class="moment-image-wrapper">
+        <!-- 2. Gallery Grid (Restored) -->
+        <section id="gallery" class="section">
+            <h2 class="section-title fade-in-up">Moments of You</h2>
+            <div class="gallery-grid fade-in-up">
+                <div class="gallery-item">
                     <img src="assets/photos/1.jpg" alt="Tamanna sitting in a fest"
                         onerror="this.src='https://placehold.co/600x800/pink/white?text=In+a+Fest'">
                 </div>
-                <div class="moment-text-wrapper">
-                    <p class="moment-text">There is a kind of beauty that feels effortless, like the first light of
-                        dawn. It doesn't ask for attention, it simply exists, and in its presence, everything feels a
-                        little brighter. That is you.</p>
-                </div>
-            </div>
-
-            <!-- Moment 2 -->
-            <div class="moment-card reverse fade-in-up">
-                <div class="moment-image-wrapper">
+                <div class="gallery-item">
                     <img src="assets/photos/2.jpg" alt="Tamanna sitting on a bench"
                         onerror="this.src='https://placehold.co/600x800/pink/white?text=On+a+Bench'">
                 </div>
-                <div class="moment-text-wrapper">
-                    <p class="moment-text">It's in the small, quiet moments where your cuteness truly shines. A sudden
-                        smile, a thoughtful glance, the way you light up when you see something you love. These little
-                        things make up the magic of who you are.</p>
-                </div>
-            </div>
-
-            <!-- Moment 3 -->
-            <div class="moment-card fade-in-up">
-                <div class="moment-image-wrapper">
+                <div class="gallery-item">
                     <img src="assets/photos/3.jpg" alt="Standing in a pink jacket"
                         onerror="this.src='https://placehold.co/600x800/pink/white?text=Pink+Jacket'">
                 </div>
-                <div class="moment-text-wrapper">
-                    <p class="moment-text">Your heart is rare. In a world that can be loud and chaotic, you carry a
-                        gentle nature that brings peace. You have a kindness that isn't just an act, but a part of your
-                        very soul.</p>
-                </div>
-            </div>
-
-            <!-- Moment 4 -->
-            <div class="moment-card reverse fade-in-up">
-                <div class="moment-image-wrapper">
+                <div class="gallery-item">
                     <img src="assets/photos/4.jpg" alt="Standing in a garden"
                         onerror="this.src='https://placehold.co/600x800/pink/white?text=In+Garden'">
                 </div>
-                <div class="moment-text-wrapper">
-                    <p class="moment-text">Just having you around makes things better. It's not about what you do or
-                        say, but simply your presence. It has a way of settling the dust, of making the ordinary feel
-                        special.</p>
-                </div>
-            </div>
-
-            <!-- Moment 5 -->
-            <div class="moment-card fade-in-up">
-                <div class="moment-image-wrapper">
+                <div class="gallery-item">
                     <img src="assets/photos/5.jpg" alt="Standing in a fest"
                         onerror="this.src='https://placehold.co/600x800/pink/white?text=Standing+Pos'">
                 </div>
-                <div class="moment-text-wrapper">
-                    <p class="moment-text">You feel genuine in a way that is hard to find. There is no pretense with
-                        you, just a pure, honest spirit that draws people in and makes them feel safe.</p>
-                </div>
-            </div>
-
-            <!-- Moment 6 -->
-            <div class="moment-card reverse fade-in-up">
-                <div class="moment-image-wrapper">
+                <div class="gallery-item">
                     <img src="assets/photos/6.jpg" alt="Beautiful dress in fest"
                         onerror="this.src='https://placehold.co/600x800/pink/white?text=Beautiful+Dress'">
                 </div>
-                <div class="moment-text-wrapper">
-                    <p class="moment-text">You bring warmth without even trying. Like a soft blanket on a cold day, your
-                        energy wraps around those near you, making them feel held, appreciated, and understood.</p>
-                </div>
             </div>
-
         </section>
 
+        <!-- 3. Beautiful Paragraphs (Grouped) -->
+        <section class="section fade-in-up">
+            <h2 class="section-title">A Letter to You</h2>
+            <div class="content-wrapper glass">
+                <p>There is a kind of beauty that feels effortless, like the first light of dawn. It doesn't ask for
+                    attention, it simply exists, and in its presence, everything feels a little brighter. That is you.
+                </p>
+
+                <p>It's in the small, quiet moments where your cuteness truly shines. A sudden smile, a thoughtful
+                    glance, the way you light up when you see something you love. These little things make up the magic
+                    of who you are.</p>
+
+                <p>Your heart is rare. In a world that can be loud and chaotic, you carry a gentle nature that brings
+                    peace. You have a kindness that isn't just an act, but a part of your very soul.</p>
+
+                <p>Just having you around makes things better. It's not about what you do or say, but simply your
+                    presence. It has a way of settling the dust, of making the ordinary feel special.</p>
+
+                <p>You feel genuine in a way that is hard to find. There is no pretense with you, just a pure, honest
+                    spirit that draws people in and makes them feel safe.</p>
+
+                <p>You bring warmth without even trying. Like a soft blanket on a cold day, your energy wraps around
+                    those near you, making them feel held, appreciated, and understood.</p>
+            </div>
+        </section>
 
         <!-- 4. Why You're Special -->
         <section class="section fade-in-up">
