--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </div>
                 <div class="moment-text-wrapper">
                     <p class="moment-text">There is a kind of beauty that feels effortless, like the first light of
-                        dawn. It doesn't ask for attention, it simply exists, and in its presence, everything feels a
+                        dawn. It exists simply and beautifully, and in its presence, everything feels a
                         little brighter. That is you.</p>
                 </div>
             </div>
